blockquote width and spacing to paragraph fixed

--- a/style.css
+++ b/style.css
@@ -11,22 +11,10 @@ body {
   --lightgrayblue: hsl(210, 46%, 95%);
 }
 
-blockquote {
-  /* border: 1px solid green; */
-  font-size: 25px;
-  margin: 0 1.5em 0 1.5em;
-  /* align-content: center; */
-  /* width: 100%; */
-}
-
 p {
   /* border: 1px solid red; */
   opacity: 70%;
   padding: 0 2.5em 2.5em 2.5em;
-  /* margin-top: 40px;
-  margin-left: 30px;
-  margin-right: 30px; */
-  opacity: 70%;
   line-height: 2;
 }
 
@@ -34,7 +22,7 @@ p {
   /* border: 1px solid red; */
   display: grid;
   grid-template-rows: 100%;
-  grid-template-columns: 80% 20%;
+  grid-template-columns: 78% 22%;
   width: 90%;
   max-width: 1440px;
   margin: 5% auto;
@@ -48,7 +36,13 @@ p {
 }
 
 .name {
-  font-size: 1.2em;
+  font-size: 1.2rem;
+}
+
+.quote {
+  /* border: 1px solid green; */
+  font-size: 1.8rem;
+  padding: 0 1.3em 0 1.3em;
 }
 
 .test {
@@ -101,7 +95,7 @@ p {
   /* border: 1px dotted purple; */
   background-color: var(--modviolet);
   color: var(--white);
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 .gray {
@@ -113,7 +107,7 @@ p {
 .white {
   /* border: 1px dotted black; */
   background-color: var(--white);
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 .black {
@@ -124,5 +118,5 @@ p {
 
 .right {
   background-color: var(--white);
-  margin-left: 30px;
+  margin-left: 20px;
 }
